--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
   "dependencies": {
     "core-js": "^3.6.5",
     "js-base64": "^2.5.2",
+    "nvm": "^0.0.4",
     "prismjs": "^1.20.0",
+    "sass": "^1.80.1",
     "vue-lazyload": "^1.3.3",
     "vue-prism-editor": "^0.5.1"
   },
@@ -33,7 +35,6 @@
     "concurrently": "^4.1.2",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
-    "node-sass": "^4.14.1",
     "resumablejs": "^1.1.0",
     "sass-loader": "^7.3.1",
     "vue": "^2.6.11",
